[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
rayon = "1.8.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
peroxide = "0.34.3"
rustworkx-core = "0.13.2"